--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout-data: main
 
 <div class="home">
     
-    <p>Not much to index yet. See left.</p>
+    <p>Not much to index yet. See right.</p>
 
 </div>
