--- a/pasteitall/index.html
+++ b/pasteitall/index.html
@@ -6,7 +6,7 @@
     <script defer src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script defer src="//code.jquery.com/ui/1.11.0/jquery-ui.min.js"></script>
     <script defer src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
-    <script defer src="/pasteitall/js/loader.js"></script>
+    <script defer src="/pasteitall/js/everything.js"></script>
 </head>
 <body>
     <div id="paste"></div>
